--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -6,6 +6,7 @@
  
 .drag-container {
   width: 400px;
+  height: 100%;
   max-width: 100%;
   margin: 0 25px 25px 0;
   display: inline-block;
@@ -15,7 +16,15 @@
   border-radius: 5px;
 }
  
+.eq-height {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+   }
+
 .item-list {
+  height: 100%;
   min-height: 60px;
   border-radius: 4px;
   display: block;
@@ -56,4 +65,12 @@
  
 .item-list.cdk-drop-list-dragging .item-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.chevron {
+  height: 20px;
+  width: 100%;
+  border-radius: 20px;
+  background-color: red;
+  color: white;
 }
