--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -3,7 +3,7 @@
   font-size: 15px;
   font-weight: bold;
 }
- 
+
 .drag-container {
   width: 400px;
   height: 100%;
@@ -16,16 +16,16 @@
   border-radius: 5px;
 }
 
-.hovered {
-  background-color: red;
+.dragged {
+  background-color: #dae1e8;
 }
- 
+
 .eq-height {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display:         flex;
-   }
+}
 
 .item-list {
   height: 100%;
@@ -34,7 +34,7 @@
   display: block;
 }
 
- 
+
 .item-box {
   padding: 8px 10px;
   border: solid 1px #ccc;
@@ -50,7 +50,11 @@
   font-size: 14px;
   border-radius: 20px;
 }
- 
+
+.container {
+  background-color: #d6eaff;
+}
+
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
@@ -59,15 +63,15 @@
               0 3px 14px 2px rgba(0, 0, 0, 0.12);
   border-radius: 20px;
 }
- 
+
 .cdk-drag-placeholder {
   opacity: 0;
 }
- 
+
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
- 
+
 .item-list.cdk-drop-list-dragging .item-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
