--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-3 eq-height">
       <div class="drag-container" [class.dragged]="story.dragged">
         <div class="section-heading">{{story.title}}</div>
-        <div id="story" #storyList="cdkDropList" [cdkDropListData]="story.tasks"
+        <div cdkDropList id="story" #storyList="cdkDropList" [cdkDropListData]="story.tasks"
           [cdkDropListConnectedTo]="[todoList, progressList, doneList]" class="item-list" (cdkDropListDropped)="drop($event)" 
           (cdkDropListEntered)="dropListEntered($event)" (cdkDropListExited)="dropListExited($event)">
           <div class="item-box" *ngFor="let item of story.tasks" cdkDrag>
@@ -51,6 +51,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="col-md-12">
+      <hr/>
     </div>
   </div>
 </div>
