--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -76,10 +76,7 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.chevron {
-  height: 20px;
-  width: 100%;
-  border-radius: 20px;
-  background-color: red;
-  color: white;
+.seperator {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
